Se agregó un nuevo perfil para Docente, se arreglaron las pantallas para que muestre el tipo de perfil, se agregaron y corrijeron las sanciones para cada tipo de perfil

--- a/biblioteca_digital/libros/templates/libros/crear_usuario.html
+++ b/biblioteca_digital/libros/templates/libros/crear_usuario.html
@@ -155,6 +155,7 @@
                     <select id="perfil" name="perfil" required>
                         <option value="alumno">Alumno</option>
                         <option value="bibliotecaria">Bibliotecaria</option>
+                        <option value="docente">Docente</option>
                     </select>
                 </div>
                 
