--- a/biblioteca_digital/libros/templates/libros/gestion_usuarios.html
+++ b/biblioteca_digital/libros/templates/libros/gestion_usuarios.html
@@ -698,6 +698,7 @@
                     <label for="perfil">Tipo de Usuario:</label>
                     <select id="perfil" name="perfil" required>
                         <option value="alumno">Alumno</option>
+                        <option value="docente">Docente</option>
                         <option value="bibliotecaria">Bibliotecaria</option>
                     </select>
                 </div>
